# groundstation-train

./: .gitignore  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  reproduce.yml
artifacts/: EVAL.md
configs/: accelerate_fsdp.yaml  deepspeed_zero3.json  dpo.yaml  sft.yaml
data/: sample_dpo_train.jsonl  sample_ops_eval.jsonl  sample_sft_train.jsonl
docs/: architecture.md  assumptions.md
src/groundstation_train/: __init__.py  config.py  schema.py
src/groundstation_train/data/: __init__.py  generate.py  playbooks.py
src/groundstation_train/eval/: __init__.py  harness.py  ops_eval.py  policies.py  report.py
src/groundstation_train/train/: __init__.py  dpo.py  registry.py  sft.py
tests/: test_generate.py  test_harness.py  test_ops_eval.py  test_policies.py  test_registry.py  test_schema.py
